feat: Enhance backtracking algorithms with additional functionality and optimizations